--- a/app/views/concretes/new.html.erb
+++ b/app/views/concretes/new.html.erb
@@ -1,1 +1,14 @@
 <!-- Your form goes here! -->
+<%= form_tag("/concretes") do %>
+  <%= label_tag('concrete[mix_type]', "Mix Type") %>
+  <%= text_field_tag('concrete[mix_type]') %>
+
+  <%= label_tag('concrete[color]', "Color") %>
+  <%= text_field_tag('concrete[color]') %>
+  <%= label_tag('concrete[psi]', "Psi") %>
+  <%= text_field_tag('concrete[psi]') %>
+  <%= label_tag('concrete[cost_per_yard]', "Cost per yard") %>
+  <%= text_field_tag('concrete[cost_per_yard]') %>
+
+  <%= submit_tag "Create Concrete" %>
+<% end %>
