--- a/app/views/babies/_form.html.erb
+++ b/app/views/babies/_form.html.erb
@@ -1,1 +1,12 @@
-<!-- Your form goes here! -->
+<!-- Your form goes here! no need to write the submit button reads it from the action-->
+<%= form_for @baby do |f|%>
+<%f.label :first_name%>
+<%=f.text_field :first_name%>
+<%f.label :last_name%>
+<%=f.text_field :last_name%>
+<%f.label :weight%>
+<%=f.text_field :weight%>
+<%f.label :birth_date%>
+<%=f.text_field :birth_date%>
+<%= f.submit%> <!-- calls create method within the controller implicitly-->
+<% end %>
