--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,1 +1,6 @@
 <!-- Your form goes here! -->
+<form action="/searches" method="POST">
+   <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+   <input name="q" type="text">
+   <input type="submit" value ="Search">
+ </form>
